// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dealer component default state renders 1`] = `
<div class="dealer">
  <p>Dealer: 0</p>
  <div class="display"></div>
</div>
`;

exports[`Dealer component game on renders 1`] = `
<div class="dealer">
  <p>Dealer: ?</p>
  <div class="display">
    <div><img src="@/assets/card.png" alt=""></div>
    <div><img src="https://deckofcardsapi.com/static/img/3S.png" alt="dealer card"></div>
  </div>
</div>
`;

exports[`Dealer component game over renders 1`] = `
<div class="dealer">
  <p>Dealer: 20</p>
  <div class="display">
    <div><img src="https://deckofcardsapi.com/static/img/5C.png" alt="dealer card"></div>
    <div><img src="https://deckofcardsapi.com/static/img/3S.png" alt="dealer card"></div>
  </div>
</div>
`;
